# swradio-8

./: .gitignore  .qmake.stash  .travis.yml  :q  AUTHORS  CMakeLists.txt  CMakeLists.txt-qt4  CMakeLists.txt-qt5  CMakeLists.txt-qt5.old  Makefile  README.md  bandplan.cpp  bandplan.h  build-swradio.txt  hackrf.tgz  hemelvaartsdag-lies-verjaardag  main.cpp  mocinclude.opt  newradio.ui  oldradio.cpp  radio-constants.h  radio.cpp  radio.h  resources.qrc  rtl-sdr.tgz  sw-bandplan.xml  swradio-8.0_resource.rc  swradio-8.1_resource.rc  swradio-8.pro  swradio-9_resource.rc  swradio-installer.iss  swradio.desktop  travis.yml  travis.yml-qt4
appimage/: AppRun  udev-rules-helper
cmake/Modules/: FindFDKAAC.cmake  FindFaadDRM.cmake
decimators/: decimator.cpp  decimator.h  newconverter.h
decoders/: virtual-decoder.cpp  virtual-decoder.h
decoders/acars-decoder/: acars-constants.h  acars-decoder.cpp  acars-decoder.h  label.c  printer.cpp  printer.h  syndrom.h
decoders/am-decoder/: am-decoder.cpp  am-decoder.h  am-decoder.ui
decoders/amtor-decoder/: amtor-decoder.cpp  amtor-decoder.h  amtor-widget.ui
decoders/cw-decoder/: cw-decoder.cpp  cw-decoder.h  cw-decoder.ui  slidingfft.cpp
decoders/cw-decoder-ok/: cw-decoder.cpp  cw-decoder.h  slidingfft.h
decoders/cw-decoder-old/: cw-decoder.h  cw-decoder.ui
decoders/cw-new/: cw-new.cpp  cw-new.h  cw-new.ui
decoders/drm-decoder/: Makefile  aac-handler.cpp  aac-handler.h  basics.cpp  basics.h  drm-bandfilter.cpp  drm-bandfilter.h  drm-decoder.cpp  drm-decoder.h  drm-decoder.ui-old  drm-spectrum.cpp  drmdecoder.ui  drmdecoder.ui-old  eqdisplay.cpp  eqdisplay.h  frame-processor.cpp  frame-processor.h  freqsyncer.cpp  freqsyncer.cpp-old  iqdisplay.cpp  iqdisplay.h  libfaad_drm-2.def  libfaad_drm-2.exp  libfaad_drm-2.lib  lowpassfilter.cpp  lowpassfilter.h  main.cpp  rate-converter.cpp  rate-converter.h  resource.h  timesync.cpp  up-converter.cpp  up-converter.h  utilities.cpp  utilities.h  word-collector.cpp  word-collector.h
decoders/drm-decoder-old/: basics.cpp  basics.h  drm-decoder.cpp  drm-decoder.h  drmdecoder.ui  eqdisplay.cpp  frame-processor.cpp  freqsyncer.h
decoders/drm-decoder-xxx/: drm-decoder.h  drm-decoder.pro  drm-spectrum.h  freqsyncer.cpp  timesync.cpp
decoders/drm-decoder.old/: basics.h  drm-decoder.cpp  drm-decoder.h  drmdecoder.ui  frame-processor.cpp  frame-processor.h  word-collector.cpp  word-collector.h
decoders/fax-decoder/: Makefile  _1  fax-buffer.cpp  fax-buffer.h  fax-decoder.cpp  fax-decoder.h  fax-decoder.pro  fax-decoder.ui  fax-demodulator.cpp  fax-demodulator.h  fax-filenames.h  fax-image.cpp  fax-image.h  fax-params.h  fax-scroller.cpp  fax-scroller.h  main.cpp
decoders/fax-decoder-old/: fax-decoder.ui  fax-demodulator.cpp  fax-filenames.cpp  fax-image.cpp
decoders/ft8-decoder/: cache.h  dl-cache.h  ft8-constants.h  ft8-decoder.cpp  ft8-decoder.h  ft8-decoder.ui  ft8-processor.cpp  ft8-processor.h  hashHandler.cpp  hashHandler.h  identity-dialog.cpp  identity-dialog.h  pack-handler.cpp  pack-handler.h  psk-writer.cpp  psk-writer.h  semaphore.h
decoders/ft8-decoder-win/: PSKReporter.h  ft8-constants.h  ft8-decoder.cpp  ft8-decoder.h  ft8-decoder.ui  ft8-processor.cpp  ft8-processor.h  ldpc.cpp  ldpc.h  pack-handler.h
decoders/hamdrm/: basics.cpp  drm-decoder.cpp  drm-decoder.h  freqsyncer.cpp  word-collector.cpp
decoders/mfsk-decoder/: goertzel-filter.cpp  goertzel-filter.h  interleave.cpp  interleave.h  mfsk-decoder.cpp  mfsk-decoder.h  mfsk-decoder.ui  slidingfft.cpp  slidingfft.h
decoders/new-decoder/: new-decoder.cpp  new-decoder.h  new-decoder.ui  viterbi.cpp
decoders/psk-decoder/: CMakeLists.txt  psk-decoder.cpp  psk-decoder.h  psk-decoder.ui
decoders/psk-decoder-ok/: psk-decoder.ui  viterbi.h
decoders/rtty-decoder/: rtty-decoder.cpp  rtty-decoder.h  rtty-decoder.ui
decoders/ssb-decoder/: ssb-decoder.cpp  ssb-decoder.h  ssb-decoder.ui
decoders/test-decoder/: cache.h  test-decoder.cpp  test-decoder.h  test-decoder.ui
devices/: device-handler.cpp  device-handler.h  device-input.cpp  device-input.h  deviceselect.cpp  deviceselect.h  pa-reader.cpp  pa-reader.h  virtual-input.cpp  virtual-input.h
devices/airspy-handler/: airspy-handler.cpp  airspy-handler.h
devices/extio-handler/: card-reader.cpp  card-reader.h  common-readers.cpp  common-readers.h  extio-handler.cpp  extio-handler.h  extio-handler.pro  extio-widget.ui  reader-base.cpp  reader-base.h  simple-converter.cpp  simple-converter.h
devices/filereader/: filehulp.cpp  filehulp.h  filereader-widget.ui  filereader.cpp  filereader.h
devices/hackrf-handler/: hackrf-handler.cpp  hackrf-handler.h  hackrf-widget.ui
devices/pmsdr-handler/: pa-reader.cpp  pa-reader.h  pmsdr-handler.cpp  pmsdr-handler.h  pmsdr-widget.ui  pmsdr.pro  pmsdr_comm.cpp  pmsdr_comm.h  pmsdr_usb.cpp  pmsdr_usb.h  si570-handler.cpp  si570-handler.h
devices/rtl_tcp/: rtl_tcp-widget.ui  rtl_tcp_client.cpp  rtl_tcp_client.h
devices/rtlsdr-handler/: dongleselect.cpp  dongleselect.h  rtlsdr-handler.cpp  rtlsdr-handler.h  (+2 more)
faad2/: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure
faad2-2.8.8/: Makefile  config.h  config.status  faad2.spec  libtool
fdk-aac/: libfdk-aac-2.def
filters/: decimating_filter.cpp  decimating_filter.h  fft-filters.cpp  fft-filters.h  fir-filters.cpp  fir-filters.h  hilbertfilter.cpp  hilbertfilter.h  if-filter.cpp  if-filter.h  iir-filters.cpp  iir-filters.h
output/: audiosink.cpp  audiosink.h  upconverter.cpp  upconverter.h
res/: sw-bandplan.xml
scopes-qwt6/: audio-scope.cpp  audio-scope.h  fft-scope.cpp  fft-scope.h  scope.cpp  scope.h  spectrogramdata.h  spectrum-scope.cpp  spectrum-scope.h  virtual-scope.cpp  virtual-scope.h  waterfall-scope.cpp  waterfall-scope.h
various/: Xtan2.cpp  Xtan2.h  agchandler.cpp  agchandler.h  downconverter.cpp  downconverter.h  fft.cpp  fft.h  popup-keypad.cpp  popup-keypad.h  program-list.cpp  program-list.h  rate-converter.cpp  ringbuffer.h  s-meter.cpp  s-meter.h  shifter.cpp  shifter.h  slidingfft.cpp  slidingfft.h  utilities.cpp  utilities.h
(+421 files in other folders)
